tests/valid/ignore_file_alias_block.php
<?php
/* php-checker-ignore-file */

function takesTwo(int $a, int $b): void
{
}

takesTwo(1);

