tests/invalid/duplicate_declaration.php
<?php

function helper(): void
{
}

function helper(): void
{
}

